@@ -57,7 +57,23 @@ END
     command.should_inline_formulae_that_are_only_used_once = false
     command.extract_repeated_parts_of_formulae = false
   end
+
+  opts.on('--makefile', 'Generate a makefile') do
+    command.create_makefile = true
+  end
+
+  opts.on('--no-makefile', 'Do not generate a makefile (default)') do
+    command.create_makefile = false
+  end
   
+  opts.on('--rakefile', 'Generate a rakefile (default)') do
+    command.create_rakefile = true
+  end
+
+  opts.on('--no-rakefile', 'Do not generate a rakefile') do
+    command.create_rakefile = false
+  end
+
   opts.on("-h", "--help", "Show this message") do
     puts opts
     exit
